// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Container matches snapshot 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0:focus {
  border-color: #0080A5;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test-id"
  >
    test label
  </label>
  Children
</div>
`;

exports[`Field Container should have invalid styles given valid prop is set to false 1`] = `
.c2 {
  color: #A40C2E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: var(--spacing-half) 0 0;
}

.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0:focus {
  border-color: #A40C2E;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test-id"
  >
    test label
  </label>
  Children
  <div
    aria-live="polite"
    class="c2"
    id="test-id_invalid"
    role="alert"
  >
    This text area input is invalid
  </div>
</div>
`;

exports[`Field Container should not have margins given noMargin prop is set to true 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0;
}

.c0:focus {
  border-color: #0080A5;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test-id"
  >
    test label
  </label>
  Children
</div>
`;
